# cs336-assignment5-alignment

./: .gitignore  CLAUDE.md  README.md  async_demo.py  async_demo2.py  demo.py  demo1.py  eval.sh  evaluate_math.py  get-flash-attn.sh  pyproject.toml  run_sft_test.sh  run_vllm_server.sh  server.py  sync_wandb.sh  todo.md  train_sft.py  vllm_demo.py
conf/: eval_math.yaml  exp_sft_fa2_omr12k.yaml  exp_sft_omr12k.yaml  exp_sft_omr2048_12k.yaml  exp_sft_omr4096_12k.yaml  sft_config.yaml  vllm_server.yaml
conf/datasets/: aime.yaml  aime22.yaml  aime23.yaml  aime24.yaml  amc.yaml  (+5 more)
cs336_alignment/: drgrpo_grader.py  eval_config.py  evaluate_math.py  optimizer.py  sft_config.py  sft_utils.py  train_sft.py  utils.py
docs/: best_qwen_on_temperature_topp.md  evaluation_benchmarks.md  generate_sft_data.md  hydra_multiple_config.md  log.md  max_batch_size.md  vllm_serve_r1.md
extra/: README.md  jsonl_server.py  launch_server.sh
outputs/: jsonl_viewer.html  math_local_results.jsonl
scripts/: batch_size_check.py  batch_size_visualize.py  eval.sh  eval_models.sh  eval_t_topp.sh  eval_t_topp1.sh  evaluate_math_baseline.py  format_omr_dataset.py  gen_math_sft_data.sh  generate_competition_math_sft.py  generate_math_sft_openai_vllm.py  launch_server.sh  load_your_dataset.py  print_results_table.py  run_sft_test.sh  run_vllm_server.sh  save_eval_datasets.py  save_omr_by_token_length.py  save_your_dataset.py  save_your_dataset_omr.py  sync_wandb.sh  test_log_generations.py  visualize_results.py  vllm_demo.py  vllm_serve.sh
tests/: adapters.py
vllm_sync/: server.py  server.yaml
(+65 files in other folders)
