[project]
name = "alignment"
version = "1.0.0"
description = "CS 336 Spring 2025 Assignment 5: Alignment"
readme = "README.md"
requires-python = ">=3.11,<3.13"  # Python 3.13 not yet supported for some deps
dependencies = [
    "accelerate>=1.5.2",
    "alpaca-eval",
    "jupyter>=1.1.1",
    "pylatexenc==2.10",
    "notebook>=7.4.2",
    "pytest>=8.3.5",
    "torch",
    "tqdm>=4.67.1",
    "transformers>=4.50.0",
    "typer>=0.15.4",
    "wandb>=0.19.8",
    "xopen>=2.0.2",
    "nvitop>=1.5.3",
    "datasets>=4.4.0",
    "vllm>=0.11.0",
    "hydra-core>=1.3.0",
    "flash-attn>=2.8.3",
    "tabulate>=0.9.0",
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
    "math-verify[antlr4-11-0]>=0.8.0",
]

[tool.setuptools.packages.find]
include = ["cs336_alignment"]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true

[tool.uv]
package = true
no-build-isolation-package = ["flash-attn"]


[tool.uv.sources]
alpaca-eval = { git = "https://github.com/nelson-liu/alpaca_eval.git", rev = "forward_kwargs_to_vllm" }

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARNING"

[[tool.uv.dependency-metadata]]
name = "flash-attn"
version = "2.7.4.post1"
requires-dist = ["torch", "einops", "setuptools"]
